hphp/hack/test/typecheck/inline_function.php
<?hh
function foo() : void {
  if(true) {
    function bar() {}
  }
}
